<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="app_intro"
            android:title="@string/text_app_intro"/>
        <Preference
            android:title="@string/text_current_version"
            android:summary="@string/leisure_version"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/text_author"
        android:summary="@string/author_name">
        <Preference
            android:key="student_id"
            android:title="@string/text_student_id"
            android:summary="@string/student_id" />
        <Preference
            android:key="student_class"
            android:title="@string/text_student_class"
            android:summary="@string/student_class" />
        <Preference
            android:key="email"
            android:title="@string/text_email"
            android:summary="@string/author_email" />
    </PreferenceCategory>

</PreferenceScreen>